@@ -1,5 +1,7 @@
 2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>
 
+	* Makefile.am: Rework stamp-tracking system.
+
 	* addon/newlib/libc/sys/hurd/configure: Remove file.
 	* addon/newlib/libc/sys/hurd/Makefile.in: Likewise.
 	* addon/newlib/libc/sys/hurd/aclocal.m4: Likewise.
